Make sure no heritage stechs too much

--- a/src/features/heritage/SummaryList.module.less
+++ b/src/features/heritage/SummaryList.module.less
@@ -16,6 +16,7 @@
     align-items: flex-start;
 
     & > * {
+      max-width: 50vw;
       margin: 0 12px 0 12px;
     }
 
